<resources>
    <string name="app_name">SoftmediaPhotoApp</string>
    <string name="username_loginactivity">Usuario</string>
    <string name="password_loginactivity">Contraseña</string>
    <string name="textButton_loginactivity">Entrar</string>
    <string name="closeDialogNotification">Cerrar</string>
    <string name="typeNotificationAll">Todo</string>
    <string name="typeNotificationViewed">Vistos</string>
    <string name="typeNotificationUnread">Sin leer</string>
    <string name="authenticationError">Error de autenticacion por favor intente nuevamente</string>
    <string name="requiredFields">Los campos son obligatorios</string>
    <string name="invalidUsernameOrPassword">Usuario o Contraseña invalida</string>
    <string name="errorConnectionWithServer">Error de comunicacion con el servidor, por favor intente nuevamente</string>
    <string name="usernameAndPasswordIsEmpty">Ingrese un usuario y una contraseña</string>
    <string name="Authenticating">Autenticando</string>
    <string name="toobarTittleDefault">Notificaciones</string>
    <string name="administrador_tipoper">ADMINISTRADOR</string>
    <string name="administrador">ADMINISTRADOR</string>
    <string name="errorUserObjectIsNull">Error en el servidor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_profile">NavProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="showProfileComple_activityNavProfileDrawer">Perfil</string>
    <string name="logout_activityNavProfileDrawer">Cerrar Sesion</string>
    <string name="notification_activityNavProfileDrawer">Notificaciones</string>
    <string name="searchStudents_activityNavProfileDrawer">Buscar Estudiantes</string>
    <string name="searchFuncionary_activityNavProfileDrawer">Buscar Funcionarios</string>
    <string name="listViewNotificationIsEmpty">No tienes notificaciones</string>
    <string name="buttonScanQR">Scanear QR</string>
    <string name="buttonSearch">Buscar</string>
    <string name="documentNumberTextView">Numero de documento</string>
    <string name="searching">Buscando Informacion</string>
    <string name="closeDialog">Cerrar</string>
    <string name="documentNumberEmpty">Debe especificar un Numero de documento o Escanear un codigo QR</string>
    <string name="noDataFound">No se encontraron datos, por favor verifique el numero de documento</string>
    <string name="QRNoFound">El dispositivo no posee lector QR</string>
    <string name="permissionNeeded">Permiso denegado</string>
</resources>
